--- a/Forecast.Rmd
+++ b/Forecast.Rmd
@@ -17,7 +17,6 @@ library(ggplot2)
 library(reshape2)
 library(knitr)
 library(R2jags)
-library(dplyr)
 library(stringr)
 library(gridExtra)
 library(boot)
@@ -26,6 +25,7 @@ library(bipartite)
 library(tidyr)
 library(doSNOW)
 library(betalink)
+library(ggbiplot)
 library(igraph)
 
 opts_chunk$set(message=FALSE,warning=FALSE,fig.width=10,fig.height=7,echo=F,cache=F,fig.align='center',fig.path="figureObserved/")
@@ -600,7 +600,7 @@ runModel<-function(Yobs_dat,Ynew_dat,jTraitmatch){
   
   #MCMC options
     system.time(
-      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/TraitMatch.jags",n.thin=1,n.iter=10000,n.burnin=9000,n.chains=2,DIC=F)
+      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/TraitMatch.jags",n.thin=1,n.iter=4000,n.burnin=3000,n.chains=2,DIC=F)
     )
     return(m2)
 }
@@ -754,7 +754,22 @@ Create a kind of venn diagram on PCA of model similarity based on per link discr
 ```{r}
 Enew<-allchains %>% filter(parameter == "Enew") %>% mutate(Index=as.numeric(as.character(Index)))
 
-Enew<-Ynew_dat %>% dplyr::select(-jinterval,-interval) %>% mutate(Index=1:nrow(Ynew_dat)) %>% inner_join(Enew,by="Index") %>% group_by(Model,Hummingbird,Iplant_Double) %>% summarize(mean=mean(inv.logit(value),na.rm=T)) 
+Enew<-Ynew_dat %>% dplyr::select(-jinterval,-interval) %>% mutate(Index=1:nrow(Ynew_dat)) %>% inner_join(Enew,by="Index")%>% dplyr::group_by(Model,Hummingbird,Iplant_Double) %>% dplyr::summarize(mean=mean(value,na.rm=T)) %>% mutate(pair=paste(Hummingbird,Iplant_Double,sep="_")) %>% ungroup() %>% dplyr::select(-Hummingbird,-Iplant_Double) %>% spread(pair,mean)
+
+modmatrix<-t(Enew[,-1])
+colnames(modmatrix)<-Enew[,1]$Model
+prmodel<-prcomp(modmatrix)
+ggbiplot(prmodel)
+
+#ordination of model space
+Enew<-allchains %>% filter(parameter == "Enew") %>% mutate(Index=as.numeric(as.character(Index)))
+
+Enew<-Ynew_dat %>% dplyr::select(-jinterval,-interval) %>% mutate(Index=1:nrow(Ynew_dat)) %>% inner_join(Enew,by="Index")%>% dplyr::group_by(Model,Hummingbird,Iplant_Double) %>% mutate(pair=paste(Hummingbird,Iplant_Double,sep="_")) %>% ungroup() %>% dplyr::select(-Hummingbird,-Iplant_Double) %>% select(Model,pair,value) spread(pair,value)
+
+modmatrix2<-as.matrix(Enew[,-1])
+rownames(modmatrix2)<-Enew[,1]$Model
+prmodel2<-prcomp(modmatrix2)
+ggbiplot(prmodel2)
 ```
 
 ```{r}
@@ -764,5 +779,5 @@ Enew<-Ynew_dat %>% dplyr::select(-jinterval,-interval) %>% mutate(Index=1:nrow(Y
 ```
 
 ```{r}
-#save.image("ObservedModel.RData")
+save.image("ObservedModel.RData")
 ```
