--- a/Forecast.Rmd
+++ b/Forecast.Rmd
@@ -48,6 +48,9 @@ paste("Run Completed at",Sys.time())
 ```{r}
 fulldat<-read.csv("data/fulldat.csv",row.names=1)
 fulldat$timestamp<-as.POSIXct(fulldat$timestamp)
+
+#Testing
+fulldat<-fulldat %>% sample_n(100)
 ```
 
 ```{r}
@@ -186,41 +189,31 @@ networks<-list()
 ## Random Baseline
 
 ```{r}
-
 indat$jinterval<-as.numeric(indat$interval)
 
-#For species identity, there can't be any species interactions not in the prediction dataset.
-obs_levels<-indat %>% filter(jinterval==1) %>% distinct(Hummingbird,Iplant_Double) %>% mutate(i=paste(Hummingbird,Iplant_Double,sep="_")) %>% .$i
-
-predict_levels<-indat %>% filter(jinterval==2) %>% distinct(Hummingbird,Iplant_Double) %>% mutate(i=paste(Hummingbird,Iplant_Double,sep="_")) %>% .$i
-
-missing<-predict_levels[!predict_levels %in% obs_levels]
-species_dat<-indat %>% filter(!paste(Hummingbird,Iplant_Double,sep="_") %in% missing) %>% droplevels()
-
-#if those missing interactions eliminate a species overall
 #Easiest to work with jags as numeric ordinal values
-species_dat$Hummingbird<-as.factor(species_dat$Hummingbird)
-species_dat$Iplant_Double<-as.factor(species_dat$Iplant_Double)
-species_dat$jBird<-as.numeric(species_dat$Hummingbird)
-species_dat$jPlant<-as.numeric(species_dat$Iplant_Double)
+indat$Hummingbird<-as.factor(indat$Hummingbird)
+indat$Iplant_Double<-as.factor(indat$Iplant_Double)
+indat$jBird<-as.numeric(indat$Hummingbird)
+indat$jPlant<-as.numeric(indat$Iplant_Double)
 indat$jinterval<-as.numeric(indat$interval)
 
-jagsIndexBird<-data.frame(Hummingbird=levels(species_dat$Hummingbird),jBird=1:length(levels(species_dat$Hummingbird)))
+jagsIndexBird<-data.frame(Hummingbird=levels(indat$Hummingbird),jBird=1:length(levels(indat$Hummingbird)))
 
-jagsIndexPlants<-data.frame(Iplant_Double=levels(species_dat$Iplant_Double),jPlant=1:length(levels(species_dat$Iplant_Double)))
+jagsIndexPlants<-data.frame(Iplant_Double=levels(indat$Iplant_Double),jPlant=1:length(levels(indat$Iplant_Double)))
 
 #Similiarly, the trait matrix needs to reflect this indexing.
-jTraitmatch<-traitmatch[rownames(traitmatch) %in% unique(species_dat$Hummingbird),colnames(traitmatch) %in% unique(species_dat$Iplant_Double)]
+jTraitmatch<-traitmatch[rownames(traitmatch) %in% unique(indat$Hummingbird),colnames(traitmatch) %in% unique(indat$Iplant_Double)]
 
-species_dat$Index<-1:nrow(species_dat)
-species_dat<-droplevels(species_dat)
+indat$Index<-1:nrow(indat)
+indat<-droplevels(indat)
 
 #Turn Time and ID into numeric indexes
-species_dat$jTime<-as.numeric(as.factor(species_dat$Date))
-species_dat$jID<-as.numeric(as.factor(species_dat$ID))
+indat$jTime<-as.numeric(as.factor(indat$Date))
+indat$jID<-as.numeric(as.factor(indat$ID))
 
 #Split data
-split_dat<-split(species_dat,species_dat$interval)
+split_dat<-split(indat,indat$interval)
 Yobs_dat<-split_dat[[1]]
 Ynew_dat<-split_dat[[2]]
 ```
@@ -254,10 +247,10 @@ runModel<-function(Yobs_dat,Ynew_dat){
   Ynew<-Ynew_dat$Yobs
   
   Dat<-list(
-    Birds=max(Yobs_dat$jBird),
+    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jPlant)),
     Bird=Yobs_dat$jBird,
     Plant=Yobs_dat$jPlant,
-    Plants=max(Yobs_dat$jPlant),
+    Plants=max(c(Yobs_dat$jPlant,Ynew_dat$jPlant)),
     Nobs=length(Yobs),
     NewBird=Ynew_dat$jBird,
     NewPlant=Ynew_dat$jPlant,
@@ -266,7 +259,7 @@ runModel<-function(Yobs_dat,Ynew_dat){
   
   #MCMC options
     system.time(
-      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity.jags",n.thin=1,n.iter=1000,n.burnin=500,n.chains=2,DIC=F)
+      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity.jags",n.thin=1,n.iter=2000,n.burnin=1900,n.chains=2,DIC=F)
     )
     return(m2)
 }
@@ -322,45 +315,6 @@ chains$Random %>% filter(parameter == "fitnew")  %>% ggplot(.,aes(x=Draw,y=value
 
 ## Species Identity
 
-```{r}
-#Cut into slices
-intervals<-unique(indat$jinterval)
-
-#For species identity, there can't be any species interactions not in the prediction dataset.
-obs_levels<-indat %>% filter(jinterval==1) %>% distinct(Hummingbird,Iplant_Double) %>% mutate(i=paste(Hummingbird,Iplant_Double,sep="_")) %>% .$i
-
-predict_levels<-indat %>% filter(jinterval==2) %>% distinct(Hummingbird,Iplant_Double) %>% mutate(i=paste(Hummingbird,Iplant_Double,sep="_")) %>% .$i
-
-missing<-predict_levels[!predict_levels %in% obs_levels]
-species_dat<-indat %>% filter(!paste(Hummingbird,Iplant_Double,sep="_") %in% missing) %>% droplevels()
-
-#if those missing interactions eliminate a species overall
-#Easiest to work with jags as numeric ordinal values
-species_dat$Hummingbird<-as.factor(species_dat$Hummingbird)
-species_dat$Iplant_Double<-as.factor(species_dat$Iplant_Double)
-species_dat$jBird<-as.numeric(species_dat$Hummingbird)
-species_dat$jPlant<-as.numeric(species_dat$Iplant_Double)
-
-jagsIndexBird<-data.frame(Hummingbird=levels(species_dat$Hummingbird),jBird=1:length(levels(species_dat$Hummingbird)))
-
-jagsIndexPlants<-data.frame(Iplant_Double=levels(species_dat$Iplant_Double),jPlant=1:length(levels(species_dat$Iplant_Double)))
-
-#Similiarly, the trait matrix needs to reflect this indexing.
-jTraitmatch<-traitmatch[rownames(traitmatch) %in% unique(species_dat$Hummingbird),colnames(traitmatch) %in% unique(species_dat$Iplant_Double)]
-
-species_dat$Index<-1:nrow(species_dat)
-species_dat<-droplevels(species_dat)
-
-#Turn Time and ID into numeric indexes
-species_dat$jTime<-as.numeric(as.factor(species_dat$Date))
-species_dat$jID<-as.numeric(as.factor(species_dat$ID))
-
-#Split data
-split_dat<-split(species_dat,species_dat$interval)
-Yobs_dat<-split_dat[[1]]
-Ynew_dat<-split_dat[[2]]
-```
-
 $$ Yobs_{i,j} \sim Bernoulli(\lambda_{i,j}) $$
 
 ```{r}
@@ -384,15 +338,15 @@ runModel<-function(Yobs_dat,Ynew_dat){
   ParsStage <- c("alpha","Ynew_pred","fit","fitnew","Enew")
   
   #Jags Data
-  Yobs<-(Yobs_dat$Yobs > 0)*1
-  Ynew<-(Ynew_dat$Yobs> 0)*1
+  Yobs<-Yobs_dat$Yobs
+  Ynew<-Ynew_dat$Yobs
   
   Dat<-list(
     Yobs=Yobs,
-    Birds=max(Yobs_dat$jBird),
+    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jPlant)),
     Bird=Yobs_dat$jBird,
     Plant=Yobs_dat$jPlant,
-    Plants=max(Yobs_dat$jPlant),
+    Plants=max(c(Yobs_dat$jPlant,Ynew_dat$jPlant)),
     Nobs=length(Yobs),
     NewBird=Ynew_dat$jBird,
     NewPlant=Ynew_dat$jPlant,
@@ -401,7 +355,7 @@ runModel<-function(Yobs_dat,Ynew_dat){
   
   #MCMC options
     system.time(
-      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity.jags",n.thin=1,n.iter=1000,n.burnin=500,n.chains=2,DIC=F)
+      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity.jags",n.thin=1,n.iter=2000,n.burnin=1900,n.chains=2,DIC=F)
     )
     return(m2)
 }
@@ -456,11 +410,7 @@ networks$Species<-getPredictions(chains$Species,Ynew_dat = Ynew_dat)
 chains$Species %>% filter(parameter == "fitnew")  %>% ggplot(.,aes(x=Draw,y=value,col=as.factor(chain))) + geom_line()  + theme_bw() + labs(col="Chain") + facet_wrap(~parameter)
 ```
 
-## Detectability + Species
-
-To Do. Should I also do traits without the detection probabilities?
-
-## Detectability + Trait-matching
+## Trait-matching
 
 For hummingbird species i feeding on plant species j observed at time k and sampling event observed by transect 
 
@@ -485,16 +435,11 @@ runModel<-function(Yobs_dat,Ynew_dat,jTraitmatch){
   #Inits
   InitStage <- function(){
     #A blank Y matrix - all present
-    initY<-rep(1,Dat$Nobs)
-    initB<-rep(0.5,Dat$Birds)
     Ynew_pred<-rep(1,Dat$Nnewdata)
-    z<-rep(1,Dat$Nobs)
-    znew<-rep(1,Dat$Nnewdata)
-    
-    list(dcam=initB,znew=znew,z=z,Ynew_pred=Ynew_pred)}
+    list(Ynew_pred=Ynew_pred)}
   
   #Parameters to track
-  ParsStage <- c("alpha","beta1","alpha_mu","alpha_sigma","beta1_sigma","beta1_mu","detect","Ynew_pred","fit","fitnew","Enew")
+  ParsStage <- c("alpha","beta1","alpha_mu","alpha_sigma","beta1_sigma","beta1_mu","Ynew_pred","fit","fitnew","Enew")
   
   #Jags Data
   Yobs<-Yobs_dat$Yobs
@@ -502,7 +447,7 @@ runModel<-function(Yobs_dat,Ynew_dat,jTraitmatch){
   
   Dat<-list(
     Yobs=Yobs,
-    Birds=max(Yobs_dat$jBird),
+    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jPlant)),
     Bird=Yobs_dat$jBird,
     Plant=Yobs_dat$jPlant,
     Nobs=length(Yobs),
@@ -514,7 +459,7 @@ runModel<-function(Yobs_dat,Ynew_dat,jTraitmatch){
   
   #MCMC options
     system.time(
-      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/TraitMatch.jags",n.thin=1,n.iter=1000,n.burnin=500,n.chains=2,DIC=F)
+      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/TraitMatch.jags",n.thin=1,n.iter=2000,n.burnin=1900,n.chains=2,DIC=F)
     )
     return(m2)
 }
@@ -537,7 +482,7 @@ getChains<-function(x,Bird="Bird",Plant="Plant"){
   splitpc<-split(pc_dive,pc_dive$parameter)
   
   #single index
-  splitpc[c("alpha","beta1","detect","Ynew_pred","Enew")]<-lapply(splitpc[c("alpha","beta1","detect","Ynew_pred","Enew")],function(x){
+  splitpc[c("alpha","beta1","Ynew_pred","Enew")]<-lapply(splitpc[c("alpha","beta1","Ynew_pred","Enew")],function(x){
     sv<-data.frame(str_match(x$par,"(\\w+)\\[(\\d+)]"))[,3]
     pc<-data.frame(x,Index=sv)
     return(pc)
@@ -567,25 +512,371 @@ ggplot(chains$Traits[chains$Traits$parameter %in% c("alpha_mu","beta1_mu"),],aes
 ggplot(chains$Traits[chains$Traits$par %in% c("beta1_mu","beta1_sigma","alpha_mu","alpha_sigma"),],aes(x=Draw,y=value,col=as.factor(chain))) + geom_line() + theme_bw() + labs(col="Chain") + ggtitle("Group Level Parameters") + facet_wrap(~par,scales="free")
 ```
 
+# Detectability
+
+To Do. Should I also do traits without the detection probabilities?
+
+## Species Identity
+Observation Model:
+
+$$ Yobs_{i,j,k,d} \sim Binomial(N_{i,j,k},\omega) $$
+
+Process Model:
+
+$$ N_{i,j,k} \sim Binomial(\lambda_{i,j}) $$
+$$ Yobs_{i,j} \sim Bernoulli(\lambda_{i,j}) $$
+
+```{r}
+#Source model
+source("models/SpeciesIdentity_Detect.R")
+
+#print model
+writeLines(readLines("models/SpeciesIdentity_Detect.R"))
+```
+
+```{r}
+#Run Model
+runModel<-function(Yobs_dat,Ynew_dat){
+  
+  #Inits
+  InitStage <- function(){
+    #A blank Y matrix - all present
+    initY<-rep(1,Dat$Nobs)
+    initB<-rep(0.5,Dat$Birds)
+    Ynew_pred<-rep(1,Dat$Nnewdata)
+    z<-rep(1,Dat$Nobs)
+    znew<-rep(1,Dat$Nnewdata)
+    
+    list(dcam=initB,znew=znew,z=z,Ynew_pred=Ynew_pred)}
+  
+  #Parameters to track
+  ParsStage <- c("alpha","Ynew_pred","fit","fitnew","Enew","detect")
+  
+  #Jags Data
+  Yobs<-Yobs_dat$Yobs
+  Ynew<-Ynew_dat$Yobs
+  
+  Dat<-list(
+    Yobs=Yobs,
+    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jPlant)),
+    Bird=Yobs_dat$jBird,
+    Plant=Yobs_dat$jPlant,
+    Plants=max(c(Yobs_dat$jPlant,Ynew_dat$jPlant)),
+    Nobs=length(Yobs),
+    NewBird=Ynew_dat$jBird,
+    NewPlant=Ynew_dat$jPlant,
+    Ynew=Ynew,
+    Nnewdata=length(Ynew))
+  
+  #MCMC options
+    system.time(
+      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity_Detect.jags",n.thin=1,n.iter=2000,n.burnin=1900,n.chains=2,DIC=F)
+    )
+    return(m2)
+}
+
+models$Species_Detect<-runModel(Yobs_dat=Yobs_dat,Ynew_dat=Ynew_dat)
+```
+
+```{r}
+#Get Chains
+getChains<-function(mod){
+  
+  pc<-reshape2::melt(mod$BUGSoutput$sims.array)
+  colnames(pc)<-c("Draw","chain","par","value")
+  
+  #extract parameter name
+  pc$parameter<-data.frame(str_match(pc$par,"(\\w+)"))[,-1]
+  
+  #Extract index
+  splitpc<-split(pc,pc$parameter)
+  
+  #single index
+  splitpc[c("alpha")]<-lapply(
+    splitpc[c("alpha")],function(x){
+    sv<-data.frame(str_match(x$par,"(\\w+)\\[(\\d+),(\\d+)]"))[,3:4]
+    colnames(sv)<-c("jBird","jPlant")
+    pc<-data.frame(x,sv)
+    })
+  
+  splitpc[c("Ynew_pred","Enew","detect")]<-lapply(
+    splitpc[c("Ynew_pred","Enew","detect")],function(x){
+    sv<-data.frame(str_match(x$par,"(\\w+)\\[(\\d+)]"))[,3]
+    pc<-data.frame(x,Index=sv)
+    })
+    
+  chains<-bind_rows(splitpc)
+return(chains)}
+```
+
+```{r}
+
+##Generate chains
+chains$Species_Detect<-getChains(models$Species_Detect)
+
+##Generate networks
+networks$Species_Detect<-getPredictions(chains$Species_Detect,Ynew_dat = Ynew_dat)
+```
+
+###Assess Convergence
+
+```{r,cache=FALSE,fig.width=5,fig.height=2}
+###Chains
+chains$Species_Detect %>% filter(parameter == "fitnew")  %>% ggplot(.,aes(x=Draw,y=value,col=as.factor(chain))) + geom_line()  + theme_bw() + labs(col="Chain") + facet_wrap(~parameter)
+```
+
+## Trait-matching
+
+For hummingbird species i feeding on plant species j observed at time k and sampling event observed by transect 
+
+Observation Model:
+
+$$ Yobs_{i,j,k,d} \sim Binomial(N_{i,j,k},\omega) $$
+
+Process Model:
+
+$$ N_{i,j,k} \sim Binomial(\lambda_{i,j,k}) $$
+$$ logit(\lambda_{i,j,k}) = \alpha_i + \beta_{1,i} * Traitmatch_{i,j} $$
+
+```{r}
+#Source model
+source("models/TraitMatch_Detect.R")
+
+#print model
+writeLines(readLines("models/TraitMatch_Detect.R"))
+
+runModel<-function(Yobs_dat,Ynew_dat,jTraitmatch){
+  
+  #Inits
+  InitStage <- function(){
+    #A blank Y matrix - all present
+    initY<-rep(1,Dat$Nobs)
+    initB<-rep(0.5,Dat$Birds)
+    Ynew_pred<-rep(1,Dat$Nnewdata)
+    z<-rep(1,Dat$Nobs)
+    znew<-rep(1,Dat$Nnewdata)
+    
+    list(dcam=initB,znew=znew,z=z,Ynew_pred=Ynew_pred)}
+  
+  #Parameters to track
+  ParsStage <- c("alpha","beta1","alpha_mu","alpha_sigma","beta1_sigma","beta1_mu","detect","Ynew_pred","fit","fitnew","Enew")
+  
+  #Jags Data
+  Yobs<-Yobs_dat$Yobs
+  Ynew<-Ynew_dat$Yobs
+  
+  Dat<-list(
+    Yobs=Yobs,
+    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jPlant)),
+    Bird=Yobs_dat$jBird,
+    Plant=Yobs_dat$jPlant,
+    Nobs=length(Yobs),
+    NewBird=Ynew_dat$jBird,
+    NewPlant=Ynew_dat$jPlant,
+    Ynew=Ynew,
+    Nnewdata=length(Ynew),
+    Traitmatch=jTraitmatch)
+  
+  #MCMC options
+    system.time(
+      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/TraitMatch_Detect.jags",n.thin=1,n.iter=2000,n.burnin=1900,n.chains=2,DIC=F)
+    )
+    return(m2)
+}
+
+#Run Model
+models$Traits_Detect<-runModel(Yobs_dat=Yobs_dat,Ynew_dat=Ynew_dat,jTraitmatch=jTraitmatch)
+```
+
+```{r}
+getChains<-function(x,Bird="Bird",Plant="Plant"){
+  #extract desired info from the models
+  #bind chains
+  pc_dive<-reshape2::melt(x$BUGSoutput$sims.array)
+  colnames(pc_dive)<-c("Draw","chain","par","value")
+  
+  #extract parameter name
+  pc_dive$parameter<-data.frame(str_match(pc_dive$par,"(\\w+)"))[,-1]
+  
+  #Extract index
+  splitpc<-split(pc_dive,pc_dive$parameter)
+  
+  #single index
+  splitpc[c("alpha","beta1","detect","Ynew_pred","Enew")]<-lapply(splitpc[c("alpha","beta1","detect","Ynew_pred","Enew")],function(x){
+    sv<-data.frame(str_match(x$par,"(\\w+)\\[(\\d+)]"))[,3]
+    pc<-data.frame(x,Index=sv)
+    return(pc)
+  }) 
+  
+  #bind all matrices back together
+  pc_dive<-bind_rows(splitpc)
+}
+```
+
+```{r}
+#Get Chains
+chains$Traits_Detect<-getChains(models$Traits_Detect,Bird="jBird",Plant="jPlant")
+
+#Get networks
+networks$Traits_Detect<-getPredictions(chains$Traits_Detect,Ynew_dat = Ynew_dat)
+```
+
+###Assess Convergence
+
+```{r,cache=FALSE,fig.width=13,fig.height=5}
+###Chains
+ggplot(chains$Traits_Detect[chains$Traits_Detect$parameter %in% c("alpha_mu","beta1_mu"),],aes(x=Draw,y=value,col=as.factor(chain))) + geom_line() + facet_wrap(~parameter,scale="free") + theme_bw() + labs(col="Chain") 
+```
+
+```{r,fig.height=5,fig.width=11}
+ggplot(chains$Traits_Detect[chains$Traits_Detect$par %in% c("beta1_mu","beta1_sigma","alpha_mu","alpha_sigma"),],aes(x=Draw,y=value,col=as.factor(chain))) + geom_line() + theme_bw() + labs(col="Chain") + ggtitle("Group Level Parameters") + facet_wrap(~par,scales="free")
+```
+
 ## Abundance 
 
 Using the counts from the transects. Abundance is especially important to model, since its fluctuating all the time.
 
 Do we have time for this?
 
-# Incorportating geography
+# Incorportating species occurrence 
 
 If species co-occurrence is a prerequisite for interaction, then the absence of interactions may stem either from a lack of detectability or species absence. We can jointly model the presence of species as a function of elevation and then existance of an interaction.
 
+## Species Identity
+Observation Model:
+
+$$ Yobs_{i,j,k,d} \sim Binomial(N_{i,j,k},\omega) $$
+
+Process Model:
+
+$$ N_{i,j,k} \sim Binomial(\lambda_{i,j}) $$
+$$ Yobs_{i,j} \sim Bernoulli(\lambda_{i,j}) $$
+
 ```{r}
+#Source model
+source("models/SpeciesIdentity_Detect_Elevation.R")
 
-
+#print model
+writeLines(readLines("models/SpeciesIdentity_Detect_Elevation.R"))
 ```
 
+```{r}
+#Run Model
+runModel<-function(Yobs_dat,Ynew_dat){
+  
+  #Inits
+  InitStage <- function(){
+    #A blank Y matrix - all present
+    initY<-rep(1,Dat$Nobs)
+    initB<-rep(0.5,Dat$Birds)
+    Ynew_pred<-rep(1,Dat$Nnewdata)
+    z<-rep(1,Dat$Nobs)
+    znew<-rep(1,Dat$Nnewdata)
+    occ_new<-rep(1,Dat$Nnewdata)
+    occ<-rep(1,Dat$Nobs)
+    
+    list(dcam=initB,znew=znew,z=z,Ynew_pred=Ynew_pred,occ_new=occ_new,occ=occ)}
+  
+  #Parameters to track
+  ParsStage <- c("alpha","Ynew_pred","fit","fitnew","Enew","alpha_occ","beta_occ","beta2_occ")
+  
+  #Jags Data
+  Yobs<-Yobs_dat$Yobs
+  Ynew<-Ynew_dat$Yobs
+  
+  Dat<-list(
+    Yobs=Yobs,
+    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jPlant)),
+    elevation=Yobs_dat$ele,
+    elevation_new=Ynew_dat$ele,
+    Bird=Yobs_dat$jBird,
+    Plant=Yobs_dat$jPlant,
+    Plants=max(c(Yobs_dat$jPlant,Ynew_dat$jPlant)),
+    Nobs=length(Yobs),
+    NewBird=Ynew_dat$jBird,
+    NewPlant=Ynew_dat$jPlant,
+    Ynew=Ynew,
+    Nnewdata=length(Ynew))
+  
+  #MCMC options
+    system.time(
+      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity_Detect_Elevation.jags",n.thin=1,n.iter=2000,n.burnin=1900,n.chains=2,DIC=F)
+    )
+    return(m2)
+}
+
+models$Species_Detect_Elevation<-runModel(Yobs_dat=Yobs_dat,Ynew_dat=Ynew_dat)
+```
+
+```{r}
+#Get Chains
+getChains<-function(mod){
+  
+  pc<-reshape2::melt(mod$BUGSoutput$sims.array)
+  colnames(pc)<-c("Draw","chain","par","value")
+  
+  #extract parameter name
+  pc$parameter<-data.frame(str_match(pc$par,"(\\w+)"))[,-1]
+  
+  #Extract index
+  splitpc<-split(pc,pc$parameter)
+  
+  #single index
+  splitpc[c("alpha")]<-lapply(
+    splitpc[c("alpha")],function(x){
+    sv<-data.frame(str_match(x$par,"(\\w+)\\[(\\d+),(\\d+)]"))[,3:4]
+    colnames(sv)<-c("jBird","jPlant")
+    pc<-data.frame(x,sv)
+    })
+  
+    splitpc[c("alpha_occ","beta_occ","beta2_occ")]<-lapply(
+    splitpc[c("alpha_occ","beta_occ","beta2_occ")],function(x){
+    sv<-data.frame(str_match(x$par,"(\\w+)\\[(\\d+)]"))[,3]
+    pc<-data.frame(x,jBird=sv)
+    })
+  
+  splitpc[c("Ynew_pred","Enew")]<-lapply(
+    splitpc[c("Ynew_pred","Enew")],function(x){
+    sv<-data.frame(str_match(x$par,"(\\w+)\\[(\\d+)]"))[,3]
+    pc<-data.frame(x,Index=sv)
+    })
+    
+  chains<-bind_rows(splitpc)
+return(chains)}
+```
+
+```{r}
+
+##Generate chains
+chains$Species_Detect_Elevation<-getChains(models$Species_Detect_Elevation)
+
+##Generate networks
+networks$Species_Detect_Elevation<-getPredictions(chains$Species_Detect_Elevation,Ynew_dat = Ynew_dat)
+```
+
+###Assess Convergence
+
+```{r,cache=FALSE,fig.width=5,fig.height=2}
+###Chains
+chains$Species_Detect_Elevation %>% filter(parameter == "fitnew")  %>% ggplot(.,aes(x=Draw,y=value,col=as.factor(chain))) + geom_line()  + theme_bw() + labs(col="Chain") + facet_wrap(~parameter)
+```
+
+### Elevation ranges
+
+```{r}
+elev_sim<-function(Model,jBird,alpha,beta,beta2,elevation){
+  p<-inv.logit(alpha+beta*elevation+beta2*elevation^2)
+  data.frame(Model=Model,jBird=jBird,elevation=elevation,p=p)
+}
+
+bird_range <- chains$Species_Detect_Elevation %>% filter(parameter %in% c("alpha_occ","beta_occ","beta2_occ")) %>% select(-par) %>% spread(parameter,value) %>% group_by(Model,jBird,Draw,chain) %>% do(elev_sim(Model=.$Model,.$jBird,.$alpha_occ,.$beta_occ,.$beta2_occ,elevation=unique(Ynew_dat$ele))) %>% mutate(jBird=as.numeric(as.character(jBird))) %>% inner_join(jagsIndexBird) %>% group_by(Model,Hummingbird,elevation) %>% dplyr::summarise(mean=mean(p),lower=quantile(p,0.05),upper=quantile(p,0.95))
+ 
+ggplot(bird_range,aes(x=elevation))  + geom_line(aes(y=mean)) + geom_ribbon(aes(ymin=lower,ymax=upper),alpha=0.2) + facet_wrap(~Hummingbird) + labs(x="Elevation",y="Probability of Occurrence")
+```
 
 # Model Comparison
 
-```{r,fig.height=4,fig.width=8}
+```{r,fig.height=7,fig.width=8}
 #A bit ugly, but let's assign names.
 for(x in 1:length(chains)){
     chains[[x]]<-chains[[x]] %>% mutate(Model=names(chains)[x])
@@ -595,12 +886,16 @@ allchains<-bind_rows(lapply(chains,bind_rows))
 
 Ynew_dat$Index<-1:nrow(Ynew_dat)
 
-fitnew<-allchains %>% filter(parameter=="Enew") %>% mutate(Index=as.numeric(Index)) %>% select(Model,Draw,chain,Index,value) %>% inner_join(Ynew_dat,by="Index") %>% group_by(Model,Draw,chain,Yobs) %>% dplyr::summarize(p=sum(value)/n())
+fitnew<-allchains %>% filter(parameter=="Enew")  %>% mutate(Level=str_extract(Model,"_(\\w+)")) %>% group_by(Model) %>% mutate(Index=as.numeric(Index)) %>% select(Model,Level,Draw,chain,Index,value) %>% inner_join(Ynew_dat,by="Index") %>% separate(Model,sep="_",c("Model","Detect","Elevation")) %>% select(-Detect,-Elevation)  %>% group_by(Model,Level,Draw,chain,Yobs) %>% dplyr::summarize(p=sum(value)/n())
+
+fitnew$Level[is.na(fitnew$Level)]<-""
+fitnew$Level<-as.factor(fitnew$Level)
+levels(fitnew$Level)<-c("","+Detect","+Detect +Elevation")
 
 fitnew$Yobs<-factor(fitnew$Yobs)
 levels(fitnew$Yobs)<-c("Absences","Presences")
 
-ggplot(fitnew,aes(x=1-p)) + geom_density(aes(fill=Model),alpha=0.5) + theme_bw() + labs(x="Proportion of correctly predicted observations") + scale_x_continuous(labels=scales::percent) + facet_wrap(~Yobs,scales="free")  
+ggplot(fitnew,aes(x=1-p,fill=Model)) + theme_bw() + labs(x="Proportion of correctly predicted observations") + scale_x_continuous(labels=scales::percent) + facet_grid(Level~Yobs,scales="free")  + geom_density(alpha=0.3) 
 
 #ggsave("Figures/PredLinksBoth.svg")
 #ggsave("Figures/PredLinksBoth.jpeg",height=3,width=7)
@@ -610,7 +905,12 @@ ggplot(fitnew,aes(x=1-p)) + geom_density(aes(fill=Model),alpha=0.5) + theme_bw()
 
 Dashed line is the observed network from the time-series.
 
-```{r,fig.height=6,fig.width=10}
+```{r,fig.height=7,fig.width=10}
+
+#How many presences?
+netdf<-melt(networks)
+netdf %>% group_by(L1,value,L2) %>% dplyr::summarize(n=n()) %>% group_by(L1,value) %>% dplyr::summarize(n=mean(n))
+
 #Get network statistics for all models.
 allnetworks<-lapply(networks,function(x){
     lapply(x,function(y){
@@ -618,30 +918,27 @@ allnetworks<-lapply(networks,function(x){
       return(data.frame(Metric=names(d),value=d))
     })
   })
-
-netdf<-melt(networks)
-netdf %>% group_by(L1,value,L2) %>% dplyr::summarize(n=n()) %>% group_by(L1,value) %>% dplyr::summarize(n=mean(n))
-
 allnetworks<-melt(allnetworks,id.var=c("Metric","value"))
 
 #Observed binary network
 m_new<-acast(Ynew_dat,Hummingbird~Iplant_Double,value.var="Yobs",fun.aggregate = sum)
-
 m_new<-m_new > 0 * 1
-
 obs_net<-networklevel(m_new,index=c("connectance","niche overlap"),level="lower")
-
 obs_net<-melt(data.frame(Metric=names(obs_net),value=obs_net))
 
 #Plot
-allnetworks<-allnetworks %>% select(Model=L1,Metric,value)
-ggplot(allnetworks,aes(x=value)) + geom_density(aes(fill=Model),alpha=0.5) + facet_wrap(~Metric) + geom_vline(data=obs_net,aes(xintercept=value),linetype="dashed") + theme_bw()
+allnetworks<-allnetworks %>% select(Model=L1,Metric,value) %>% mutate(Level=str_extract(Model,"_(\\w+)"))%>% separate(Model,sep="_",c("Model","Detect","Elevation")) %>% select(-Detect,-Elevation) 
+
+allnetworks$Level[is.na(allnetworks$Level)]<-""
+allnetworks$Level<-as.factor(allnetworks$Level)
+levels(allnetworks$Level)<-c("","+Detect","+Detect +Elevation")
+
+ggplot(allnetworks,aes(x=value)) + geom_density(aes(fill=Model),alpha=0.5) + facet_grid(Level~Metric) + geom_vline(data=obs_net,aes(xintercept=value),linetype="dashed") + theme_bw()
 ```
 
 # Predicted betadiversity
 
 Dissimilairty in interactions (Beta_WN from Poisot 2012)
-
 Dashed line is the observed network from the time-series.
 
 ```{r}
@@ -656,7 +953,7 @@ m_new<-m_new > 0 * 1
 obs_dis<-betalink(graph.incidence(m_obs),graph.incidence(m_new))
 ```
 
-```{r,fig.height=4,fig.width=10}
+```{r,fig.height=8,fig.width=10}
 betastat<-lapply(networks,function(x){
   lapply(x,function(y){
     obs_dis<-betalink(graph.incidence(m_obs),graph.incidence(y))
@@ -665,10 +962,19 @@ betastat<-lapply(networks,function(x){
 
 betastat<-melt(betastat)
 colnames(betastat)<-c("value","Betadiversity","Iteration","Model")
+
+#label models
+betastat<-betastat %>% mutate(Level=str_extract(Model,"_(\\w+)"))%>% separate(Model,sep="_",c("Model","Detect","Elevation")) %>% select(-Detect,-Elevation) 
+
+betastat$Level[is.na(betastat$Level)]<-""
+betastat$Level<-as.factor(betastat$Level)
+levels(betastat$Level)<-c("","+Detect","+Detect +Elevation")
+
+#Observed dis.
 mobs_dis<-melt(obs_dis)
 colnames(mobs_dis)<-c("value","Betadiversity")
 
-#recode levels
+#recode levels to make more attractice.
 betastat$Betadiversity<-factor(betastat$Betadiversity)
 levels(betastat$Betadiversity)[levels(betastat$Betadiversity) %in% "WN"]<-"Interaction Dissimilarity"
 levels(betastat$Betadiversity)[levels(betastat$Betadiversity) %in% "ST"]<-"Interaction Turnover"
@@ -681,7 +987,7 @@ levels(mobs_dis$Betadiversity)[levels(mobs_dis$Betadiversity) %in% "ST"]<-"Inter
 levels(mobs_dis$Betadiversity)[levels(mobs_dis$Betadiversity) %in% "OS"]<-"Interaction Rewiring"
 levels(mobs_dis$Betadiversity)[levels(mobs_dis$Betadiversity) %in% "S"]<-"Species Turnover"
 
-ggplot(betastat %>% filter(!Betadiversity %in% "Species Turnover"),aes(x=value,fill=Model)) + geom_density() + facet_wrap(~Betadiversity,scales="free",nrow=1) + geom_vline(data=mobs_dis  %>% filter(!Betadiversity %in% "Species Turnover"),aes(xintercept=value),linetype="dashed")
+ggplot(betastat %>% filter(!Betadiversity %in% "Species Turnover"),aes(x=value,fill=Model)) + geom_density() + facet_grid(Level~Betadiversity,scales="free") + geom_vline(data=mobs_dis  %>% filter(!Betadiversity %in% "Species Turnover"),aes(xintercept=value),linetype="dashed")
 ```
 
 # Model overlap
@@ -691,10 +997,11 @@ Create a kind of venn diagram on PCA of model similarity based on per link discr
 ```{r}
 Enew<-allchains %>% filter(parameter == "Enew") %>% mutate(Index=as.numeric(as.character(Index)))
 
-worst<-Ynew_dat %>% dplyr::select(-jinterval,-interval) %>% mutate(Index=1:nrow(Ynew_dat)) %>% inner_join(Enew,by="Index")%>% dplyr::group_by(Model,Hummingbird,Iplant_Double) %>% dplyr::summarize(mean=mean(-1*value,na.rm=T)) %>% mutate(pair=paste(Hummingbird,Iplant_Double,sep="_")) %>% ungroup() %>% dplyr::select(-Hummingbird,-Iplant_Double) %>% arrange(mean) %>% group_by(Model) %>% top_n(-3,mean) 
+worst<-Ynew_dat %>% dplyr::select(-jinterval,-interval) %>% mutate(Index=1:nrow(Ynew_dat)) %>% inner_join(Enew,by="Index")%>% dplyr::group_by(Model,Hummingbird,Iplant_Double) %>% dplyr::summarize(mean=mean(-1*value,na.rm=T)) %>% mutate(pair=paste(Hummingbird,Iplant_Double,sep="_")) %>% ungroup() %>% dplyr::select(-Hummingbird,-Iplant_Double) %>% arrange(mean) %>% group_by(Model) %>% top_n(-4,mean) 
+
 worst
 
-Enew<-Ynew_dat %>% dplyr::select(-jinterval,-interval) %>% mutate(Index=1:nrow(Ynew_dat)) %>% inner_join(Enew,by="Index")%>% dplyr::group_by(Model,Hummingbird,Iplant_Double) %>% dplyr::summarize(mean=mean(-1*value,na.rm=T)) %>% mutate(pair=paste(Hummingbird,Iplant_Double,sep="_")) %>% ungroup() %>% dplyr::select(-Hummingbird,-Iplant_Double) %>% spread(pair,mean)
+Enew<-Ynew_dat %>% dplyr::select(-jinterval,-interval) %>% mutate(Index=1:nrow(Ynew_dat)) %>% inner_join(Enew,by="Index")%>% dplyr::group_by(Model,Hummingbird,Iplant_Double) %>% dplyr::summarize(mean=mean(-1*value,na.rm=T)) %>% mutate(pair=paste(Hummingbird,Iplant_Double,sep="_")) %>% ungroup() %>% dplyr::select(-Hummingbird,-Iplant_Double) %>% spread(pair,mean) 
 
 modmatrix<-t(Enew[,-1])
 colnames(modmatrix)<-Enew[,1]$Model
@@ -703,19 +1010,7 @@ prmodel<-prcomp(modmatrix,scale=T)
 #get best differntial labels, those which exist in the edges of the space
 #loadings<-melt(prmodel$x) %>% spread(Var2,value) %>% group_by(Var2) %>% dplyr::summarize(min(value),max(value))
 
-ggbiplot(prmodel,alpha=0.2) + theme_bw()
-```
-
-```{r,eval=F}
-#ordination of model space
-Enew<-allchains %>% filter(parameter == "Enew") %>% mutate(Index=as.numeric(as.character(Index)))
-
-Enew<-Ynew_dat %>% dplyr::select(-jinterval,-interval) %>% mutate(Index=1:nrow(Ynew_dat)) %>% inner_join(Enew,by="Index")%>% dplyr::group_by(Model,Hummingbird,Iplant_Double) %>% mutate(pair=paste(Hummingbird,Iplant_Double,sep="_")) %>% ungroup() %>% dplyr::select(-Hummingbird,-Iplant_Double) %>% select(Model,pair,value) spread(pair,value) 
-
-modmatrix2<-as.matrix(Enew[,-1])
-rownames(modmatrix2)<-Enew[,1]$Model
-prmodel2<-prcomp(modmatrix2)
-ggbiplot(prmodel2)
+ggbiplot(prmodel,alpha=0.2,varname.size = 4) + theme_bw() 
 ```
 
 ```{r}
